# github_telegram_bot

./: .gitignore  Makefile  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.py
src/: main.py  models.py  utils.py
src/actions/: base.py  issues.py  pull_request.py  pull_request_review.py
test/issues/: edited.json
test/pull_request/: review_requested.json
test/pull_request_review/: submitted.json
